--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,11 @@ version: 4.1.0
 homepage: https://github.com/wuweijian1997/FlutterCountdownTimer    #GitHub仓库地址
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
+  clock: ^1.1.1
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
 
@@ -18,7 +20,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
-flutter:
+# flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
